--- a/contact.html
+++ b/contact.html
@@ -59,7 +59,7 @@
         </div>
       </div>
       <div class="section-new-3 contact">
-        <div class="wrapper-4 w-container">
+        <div class="wrapper-4-contact w-container">
           <div data-duration-in="300" data-duration-out="100" class="tabs-4 w-tabs">
             <div class="tabs-menu-7 w-tab-menu">
               <a data-w-tab="1" class="con-tab w-inline-block w-tab-link w--current">
