--- a/uxahead.html
+++ b/uxahead.html
@@ -25,8 +25,8 @@
   <script type="text/javascript">WebFont.load({  google: {    families: ["Inter:300,regular,500,600","Noto Serif:regular,700"]  }});</script>
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
-  <link href="images/favicon.svg" rel="shortcut icon" type="image/x-icon">
-  <link href="images/webclip.svg" rel="apple-touch-icon">
+  <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
+  <link href="images/webclip.png" rel="apple-touch-icon">
 </head>
 <body>
   <div class="nav-bar" style="background-color: #C72A3F;"><a href="index.html" class="w-inline-block"><img src="images/logo-1.png" loading="lazy" alt=""></a><a data-w-id="5b5faf5e-6f20-c943-a783-a960174af71e" href="#" class="hammenu w-inline-block"><img src="images/Group 5472.png" loading="lazy" alt=""></a></div>
@@ -197,7 +197,7 @@
       <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-heart" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
         <path fill-rule="evenodd" d="M8 2.748l-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z"/>
       </svg> 
-      uxmint</a><a href="privacy-polocy.html" class="text-link-3-footer">Privacy policy</a><div class="footer-divider-2"></div><a href="terms-&-conditions.html" class="text-link-3-footer">Terms & Conditions</a></div>
+      uxmint</a><a href="privacy-policy.html" class="text-link-3-footer">Privacy policy</a><div class="footer-divider-2"></div><a href="terms-&-conditions.html" class="text-link-3-footer">Terms & Conditions</a></div>
     </div>
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=5f6b56e1763ff97ee6f130d9" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
