google Map fixes

--- a/contact.html
+++ b/contact.html
@@ -58,6 +58,7 @@
             <div class="text-h3 black">You can drop us an email at</div><a href="mailto:hello@uxmint.in" class="text-button-link-1 lower-case">hello@uxmint.in</a></div>
         </div>
       </div>
+     
       <div class="section-new-3 contact">
         <div class="wrapper-4-contact w-container">
           <div data-duration-in="300" data-duration-out="100" class="tabs-4 w-tabs">
@@ -158,6 +159,29 @@
           </div>
         </div>
       </div>
+
+      <div class="section-new team">
+        <div class="wrapper w-container">
+          <div class="w-layout-grid grid-about-us-target">
+            <div class="mapouter"><div class="gmap_canvas"><iframe width="600" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=Plot%20no,%2016%20%20Nethaji%20Street,%20%20Annai%20Indira%20Nagar,%20%20Okkiyam,%20Thoraipakkam%20%20Tamilnadu%20-%20600096&t=&z=17&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://123movies-to.org"></a><br><style>.mapouter{position:relative;text-align:right;height:500px;width:600px;}</style><a href="https://www.embedgooglemap.net">google map in website</a><style>.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:600px;}</style></div></div>
+            <div>
+              <div class="div-aboutus-services">
+                <div class="text-h3 black bold">Visit us at our Chennai uxmint Learning Centre anytime between 10am and 7pm</div>
+                <div class="text-h6 grey note">Note: Currently closed due to COVID</div>
+              </div>
+              <div class="text-h3 black">Plot no, 16</div>
+              <div class="text-h3 black">Nethaji Street,</div>
+              <div class="text-h3 black">Annai Indira Nagar,</div>
+              <div class="text-h3 black">Okkiyam, Thoraipakkam</div>
+              <div class="text-h3 black">Tamilnadu - 600096</div>
+              <div class="text-h3 black land">Landmark</div>
+              <div class="text-h3 black">Lane Opp to Cognizant TCO</div>
+            </div>
+            <!-- text-h2-5  -->
+          </div>
+        </div>
+      </div>
+
   <div class="section-footer">
     <div class="footer-wrapper w-container">
       <div class="footer-idea">
