--- a/ui-design.html
+++ b/ui-design.html
@@ -29,7 +29,7 @@
   <link href="images/webclip.png" rel="apple-touch-icon">
 </head>
 <body>
-  <div class="nav-bar"><a href="index.html" aria-current="page" class="w-inline-block w--current"><img src="images/logo-2.png" loading="lazy" alt=""></a><a  href="#" class="hammenu w-inline-block"><img src="images/Group-5518.svg" loading="lazy" alt=""></a></div>
+  <div class="nav-bar"><a href="index.html" aria-current="page" class="w-inline-block w--current"><img src="images/Mint.png" loading="lazy" alt=""></a><a  href="#" class="hammenu w-inline-block"><img src="images/Group-5518.svg" loading="lazy" alt=""></a></div>
   <div class="custom-nav-menu">
     <div class="w-layout-grid navigation-menu-grid">
       <div class="costom-nav-container-1"><a href="index.html" class="text-navmenu-link-1">Home</a><a href="projects.html" class="text-navmenu-link-1">Works</a><a href="services.html" class="text-navmenu-link-1">Services</a></div>
