--- a/contact.html
+++ b/contact.html
@@ -32,11 +32,11 @@
 <body class="body">
   <body>
     <div class="nav-bar">
-      <a href="index.html" aria-current="page" class="w-inline-block w--current"><img src="images/logo-2.png" loading="lazy" alt=""></a>
+      <a href="index.html" aria-current="page" class="w-inline-block w--current"><img src="images/Mint.png" loading="lazy" alt=""></a>
       <a data-w-id="5b5faf5e-6f20-c943-a783-a960174af71e" href="#" class="hammenu w-inline-block"><img src="images/Group-5518.svg" loading="lazy" alt=""></a>
     </div>
     <!-- <div class="nav-bar">
-      <a href="index.html" aria-current="page" class="w-inline-block w--current"><img src="images/logo-2.png" loading="lazy" alt=""></a>
+      <a href="index.html" aria-current="page" class="w-inline-block w--current"><img src="images/Mint.png" loading="lazy" alt=""></a>
       <a data-w-id="5b5faf5e-6f20-c943-a783-a960174af71e" href="#" class="hammenu w-inline-block"><img src="images/Group-5518.svg" loading="lazy" alt=""></a>
     </div> -->
     <div class="custom-nav-menu">
