--- a/end-to-end-development.html
+++ b/end-to-end-development.html
@@ -29,7 +29,7 @@
   <link href="images/webclip.png" rel="apple-touch-icon">
 </head>
 <body>
-  <div class="nav-bar"><a href="index.html" aria-current="page" class="w-inline-block w--current"><img src="images/logo-2.png" loading="lazy" alt=""></a><a  href="#" class="hammenu w-inline-block"><img src="images/Group-5518.svg" loading="lazy" alt=""></a></div>
+  <div class="nav-bar"><a href="index.html" aria-current="page" class="w-inline-block w--current"><img src="images/Mint.png" loading="lazy" alt=""></a><a  href="#" class="hammenu w-inline-block"><img src="images/Group-5518.svg" loading="lazy" alt=""></a></div>
   <div class="sectionhero services">
     <div class="wrapper-services-hero w-container">
       <div class="w-layout-grid grid-services-header">
