--- a/contact.html
+++ b/contact.html
@@ -166,8 +166,7 @@
             <div class="mapouter"><div class="gmap_canvas"><iframe width="600" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=Plot%20no,%2016%20%20Nethaji%20Street,%20%20Annai%20Indira%20Nagar,%20%20Okkiyam,%20Thoraipakkam%20%20Tamilnadu%20-%20600096&t=&z=17&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://123movies-to.org"></a><br><style>.mapouter{position:relative;text-align:right;height:500px;width:600px;}</style><a href="https://www.embedgooglemap.net">google map in website</a><style>.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:600px;}</style></div></div>
             <div>
               <div class="div-aboutus-services">
-                <div class="text-h3 black bold">Visit us at our Chennai uxmint Learning Centre anytime between 10am and 7pm</div>
-                <div class="text-h6 grey note">Note: Currently closed due to COVID</div>
+                <div class="text-h3 black bold">You can visit the progresses any time between 10am and 6pm monday to friday</div>
               </div>
               <div class="text-h3 black">Plot no, 16</div>
               <div class="text-h3 black">Nethaji Street,</div>
@@ -175,7 +174,7 @@
               <div class="text-h3 black">Okkiyam, Thoraipakkam</div>
               <div class="text-h3 black">Tamilnadu - 600096</div>
               <div class="text-h3 black land">Landmark</div>
-              <div class="text-h3 black">Lane Opp to Cognizant TCO</div>
+              <div class="text-h3 black">Lane Opp to Holiday Inn</div>
             </div>
             <!-- text-h2-5  -->
           </div>
