--- a/contact.html
+++ b/contact.html
@@ -66,9 +66,9 @@
               <a data-w-tab="1" class="con-tab w-inline-block w-tab-link w--current">
                 <div class="text-block-29">Query &amp; Collaboration</div>
               </a>
-              <a data-w-tab="2" class="con-tab1 w-inline-block w-tab-link">
+              <!-- <a data-w-tab="2" class="con-tab1 w-inline-block w-tab-link">
                 <div class="text-block-30">Career Opportunities</div>
-              </a>
+              </a> -->
             </div>
             <div class="tabs-content-2 w-tab-content">
               <div data-w-tab="1" class="tab-pane-1-4 w-tab-pane w--tab-active">
@@ -118,7 +118,7 @@
                   </div>
                 </div>
               </div>
-              <div data-w-tab="2" class="w-tab-pane">
+              <!-- <div data-w-tab="2" class="w-tab-pane">
                 <div class="div-block-126">
                   <div class="text-22-light">Hey, Fill in the details below to join us.</div>
                 </div>
@@ -154,16 +154,16 @@
                     <div>Oops! Something went wrong while submitting the form.</div>
                   </div>
                 </div>
-              </div>
+              </div> -->
             </div>
           </div>
         </div>
       </div>
 
-      <div class="section-new team">
+      <div class="section-new team map">
         <div class="wrapper w-container">
           <div class="w-layout-grid grid-about-us-target">
-            <div class="mapouter"><div class="gmap_canvas"><iframe width="600" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=Plot%20no,%2016%20%20Nethaji%20Street,%20%20Annai%20Indira%20Nagar,%20%20Okkiyam,%20Thoraipakkam%20%20Tamilnadu%20-%20600096&t=&z=17&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://123movies-to.org"></a><br><style>.mapouter{position:relative;text-align:right;height:500px;width:600px;}</style><a href="https://www.embedgooglemap.net">google map in website</a><style>.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:600px;}</style></div></div>
+            <div class="mapouter"><div class="gmap_canvas"><iframe width="600" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=Plot%20no,%2016%20%20Nethaji%20Street,%20%20Annai%20Indira%20Nagar,%20%20Okkiyam,%20Thoraipakkam%20%20Tamilnadu%20-%20600096&t=&z=17&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://123movies-to.org"></a><br><a href="https://www.embedgooglemap.net">google map in website</a></div></div>
             <div>
               <div class="div-aboutus-services">
                 <div class="text-h3 black bold">You can visit the progresses any time between 10am and 6pm monday to friday</div>
