--- a/services.html
+++ b/services.html
@@ -529,12 +529,12 @@
               <div class="footer-divider-1"></div><a href="tel:+91 919940410072" class="text-link-2-footer">+91 9940410072</a></div>
             <div class="footer-contact"><a href="https://www.linkedin.com/company/uxmint-design" target="_blank" class="text-link-2-footer">LinkedIn</a>
               <div class="footer-divider-1"></div><a href="https://medium.com/uxmint" target="_blank" class="text-link-2-footer">Medium</a></div>
-              <div class="footer-contact"><div class="location-icon"><img src="images/location-pin.svg"></div><div class="location-text">
+              <!-- <div class="footer-contact"><div class="location-icon"><img src="images/location-pin.svg"></div><div class="location-text">
                 Plot no, 16, <br>
                 Nethaji Street, <br>
                 Annai Indira Nagar, <br>
                 Okkiyam, Thoraipakkam, <br>
-                Tamilnadu - 600096</div></div>
+                Tamilnadu - 600096</div></div> -->
           </div>
         </div>
         <div class="footer-block-2">
