--- a/contact.html
+++ b/contact.html
@@ -163,17 +163,18 @@
       <div class="section-new team map">
         <div class="wrapper w-container">
           <div class="w-layout-grid grid-about-us-target">
-            <div class="mapouter"><div class="gmap_canvas"><iframe width="600" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=Plot%20no,%2016%20%20Nethaji%20Street,%20%20Annai%20Indira%20Nagar,%20%20Okkiyam,%20Thoraipakkam%20%20Tamilnadu%20-%20600096&t=&z=17&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://123movies-to.org"></a><br><a href="https://www.embedgooglemap.net">google map in website</a></div></div>
+            <div class="mapouter"><div class="gmap_canvas"><iframe width="600" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=Plot%20no,%2016%20Nethaji%20Street,%20Annai%20Indira%20Nagar,%20Okkiyam,%20Thoraipakkam,%20Chennai,%20Tamilnadu%20-%20600096&t=k&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://fmovies2.org"></a><br><a href="https://www.embedgooglemap.net">google map in website</a></div></div>
             <div>
               <div class="div-aboutus-services">
-                <div class="text-h3 black bold">You can visit the progresses any time between 10am and 6pm monday to friday</div>
+                <div class="text-h3 black bold">You can drop in to the premises between 10.00 AM to 6.00 PM [Monday - Friday]</div>
               </div>
               <div class="text-h3 black">Plot no, 16</div>
               <div class="text-h3 black">Nethaji Street,</div>
               <div class="text-h3 black">Annai Indira Nagar,</div>
-              <div class="text-h3 black">Okkiyam, Thoraipakkam</div>
-              <div class="text-h3 black">Tamilnadu - 600096</div>
-              <div class="text-h3 black land">Landmark</div>
+              <div class="text-h3 black">Okkiyam, Thoraipakkam,</div>
+              <div class="text-h3 black">Chennai, Tamilnadu - 600096</div>
+              <!-- <div class="text-h3 black">Tamilnadu - 600096</div> -->
+              <div class="text-h3 black bold land">Landmark</div>
               <div class="text-h3 black">Lane Opp to Holiday Inn</div>
             </div>
             <!-- text-h2-5  -->
@@ -195,12 +196,12 @@
               <div class="footer-divider-1"></div><a href="tel:+91 919940410072" class="text-link-2-footer">+91 9940410072</a></div>
             <div class="footer-contact"><a href="https://www.linkedin.com/company/uxmint-design" target="_blank" class="text-link-2-footer">LinkedIn</a>
               <div class="footer-divider-1"></div><a href="https://medium.com/uxmint" target="_blank" class="text-link-2-footer">Medium</a></div>
-              <div class="footer-contact"><div class="location-icon"><img src="images/location-pin.svg"></div><div class="location-text">
+              <!-- <div class="footer-contact"><div class="location-icon"><img src="images/location-pin.svg"></div><div class="location-text">
                 Plot no, 16, <br>
                 Nethaji Street, <br>
                 Annai Indira Nagar, <br>
                 Okkiyam, Thoraipakkam, <br>
-                Tamilnadu - 600096</div></div>
+                Chennai, Tamilnadu - 600096</div></div> -->
           </div>
         </div>
         <div class="footer-block-2">
