--- a/contact.html
+++ b/contact.html
@@ -80,25 +80,21 @@
                     <div class="w-layout-grid grid-contact">
                       <div id="w-node-d5304fe187ff-29f958c8" class="form-element-1">
                         <div class="w-layout-grid grid-32"><label class="w-checkbox">
-                            <div class="w-checkbox-input w-checkbox-input--inputType-custom form-check"></div><input type="checkbox" id="position" name="position" value="UX Consultant" data-name="position" style="opacity:0;position:absolute;z-index:-1"><span for="Checkbox " class="checkbox-label-2 w-form-label">UX Consultant</span>
+                            <div class="w-checkbox-input w-checkbox-input--inputType-custom form-check"></div><input type="checkbox" id="position" name="position" value="UX Consulting" data-name="position" style="opacity:0;position:absolute;z-index:-1"><span for="Checkbox " class="checkbox-label-2 w-form-label">UX Consulting</span>
                           </label><label class="w-checkbox">
-                            <div class="w-checkbox-input w-checkbox-input--inputType-custom form-check"></div><input type="checkbox" id="position" name="position" value="Visual design" data-name="position" style="opacity:0;position:absolute;z-index:-1"><span for="Checkbox " class="checkbox-label-2 w-form-label">Visual design</span>
-                          </label><label class="w-checkbox">
-                            <div class="w-checkbox-input w-checkbox-input--inputType-custom form-check"></div><input type="checkbox" id="position" name="position" value="Branding" data-name="position" style="opacity:0;position:absolute;z-index:-1"><span for="Checkbox " class="checkbox-label-2 w-form-label">Branding</span>
-                          </label><label class="w-checkbox">
-                            <div class="w-checkbox-input w-checkbox-input--inputType-custom form-check"></div><input type="checkbox" id="position" name="position" value="Digital Transformation" data-name="position" style="opacity:0;position:absolute;z-index:-1"><span for="Checkbox " class="checkbox-label-2 w-form-label">Digital Transformation</span>
-                          </label><label class="w-checkbox">
-                            <div class="w-checkbox-input w-checkbox-input--inputType-custom form-check"></div><input type="checkbox" id="position" name="position" value="Back End Dev" data-name="position" style="opacity:0;position:absolute;z-index:-1"><span for="Checkbox " class="checkbox-label-2 w-form-label">Back End Dev</span>
+                            <div class="w-checkbox-input w-checkbox-input--inputType-custom form-check"></div><input type="checkbox" id="position" name="position" value="UX Resourcing" data-name="position" style="opacity:0;position:absolute;z-index:-1"><span for="Checkbox " class="checkbox-label-2 w-form-label">UX Resourcing</span>
                           </label><label class="w-checkbox">
                             <div class="w-checkbox-input w-checkbox-input--inputType-custom form-check"></div><input type="checkbox" id="position" name="position" value="Strategy Design" data-name="position" style="opacity:0;position:absolute;z-index:-1"><span for="Checkbox " class="checkbox-label-2 w-form-label">Strategy Design</span>
                           </label><label class="w-checkbox">
-                            <div class="w-checkbox-input w-checkbox-input--inputType-custom form-check"></div><input type="checkbox" id="position" name="position" value="Mobile App" data-name="position" style="opacity:0;position:absolute;z-index:-1"><span for="Checkbox " class="checkbox-label-2 w-form-label">Mobile App</span>
+                            <div class="w-checkbox-input w-checkbox-input--inputType-custom form-check"></div><input type="checkbox" id="position" name="position" value="User Testing" data-name="position" style="opacity:0;position:absolute;z-index:-1"><span for="Checkbox " class="checkbox-label-2 w-form-label">Usability Testing</span>
                           </label><label class="w-checkbox">
-                            <div class="w-checkbox-input w-checkbox-input--inputType-custom form-check"></div><input type="checkbox" id="position" name="position" value="Enterprise App" data-name="position" style="opacity:0;position:absolute;z-index:-1"><span for="Checkbox " class="checkbox-label-2 w-form-label">Enterprise App</span>
+                            <div class="w-checkbox-input w-checkbox-input--inputType-custom form-check"></div><input type="checkbox" id="position" name="position" value="Mobile App" data-name="position" style="opacity:0;position:absolute;z-index:-1"><span for="Checkbox " class="checkbox-label-2 w-form-label">Mobile App Design</span>
                           </label><label class="w-checkbox">
-                            <div class="w-checkbox-input w-checkbox-input--inputType-custom form-check"></div><input type="checkbox" id="position" name="position" value="Product Development" data-name="position" style="opacity:0;position:absolute;z-index:-1"><span for="Checkbox " class="checkbox-label-2 w-form-label">Product Development</span>
+                            <div class="w-checkbox-input w-checkbox-input--inputType-custom form-check"></div><input type="checkbox" id="position" name="position" value="Branding" data-name="position" style="opacity:0;position:absolute;z-index:-1"><span for="Checkbox " class="checkbox-label-2 w-form-label">Branding</span>
                           </label><label class="w-checkbox">
-                            <div class="w-checkbox-input w-checkbox-input--inputType-custom form-check"></div><input type="checkbox" id="position" name="position" value="User Testing" data-name="position" style="opacity:0;position:absolute;z-index:-1"><span for="Checkbox " class="checkbox-label-2 w-form-label">User Testing</span>
+                            <div class="w-checkbox-input w-checkbox-input--inputType-custom form-check"></div><input type="checkbox" id="position" name="position" value="Product Development" data-name="position" style="opacity:0;position:absolute;z-index:-1"><span for="Checkbox " class="checkbox-label-2 w-form-label">Product Design</span>
+                          </label><label class="w-checkbox">
+                            <div class="w-checkbox-input w-checkbox-input--inputType-custom form-check"></div><input type="checkbox" id="position" name="position" value="Digital Transformation" data-name="position" style="opacity:0;position:absolute;z-index:-1"><span for="Checkbox " class="checkbox-label-2 w-form-label">Digital Transformation</span>
                           </label><label class="w-checkbox">
                             <div class="w-checkbox-input w-checkbox-input--inputType-custom form-check"></div><input type="checkbox" id="position" name="position" value="Something more" data-name="position" style="opacity:0;position:absolute;z-index:-1"><span for="Checkbox " class="checkbox-label-2 w-form-label">Something more</span>
                           </label></div>
@@ -107,7 +103,7 @@
                       <div class="form-element-1"><label for="name-6" class="form-label">Mail</label><input type="text" class="text-field w-input" maxlength="256" name="email" data-name="Name 6" placeholder="" id="name-6"></div>
                       <div class="form-element-1"><label for="name-5" class="form-label">Phone</label><input type="tel" class="text-field w-input" maxlength="256" name="phone" data-name="Name 5" placeholder="" id="name-5"></div>
                       <div class="form-element-1"><label for="name-4" class="form-label">Businesss / Organisation</label><input type="text" class="text-field w-input" maxlength="256" name="businesss" data-name="Name 4" placeholder="" id="name-4"></div>
-                      <div class="form-element-1"><label for="name-2" class="form-label">Enter Enquiry here</label><input type="text" class="text-field w-input" maxlength="256" name="message" data-name="Name 2" placeholder="" id="name-2"></div>
+                      <div class="form-element-1"><label for="name-2" class="form-label">Your Query here</label><input type="text" class="text-field w-input" maxlength="256" name="message" data-name="Name 2" placeholder="" id="name-2"></div>
                     </div><input type="submit" value="Submit" data-wait="Please wait..." class="button-3 w-button">
                   </form>
                   <div class="w-form-done">
