--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -38,7 +38,7 @@
   <div>
     <div class="container-34 w-container">
       <div class="div-block-111">
-        <div class="text-h2-2 black">Privacy policy</div>
+        <div class="text-h2-2 black">Privacy Policy</div>
         <div class="text-terms">This Privacy Policy governs the manner in which UX MINT collects, uses, maintains and discloses information collected from users each, a “User”) of the www.uxmint.in website. This privacy policy applies to the Site and all products and services offered by UX MINT<br></div>
       </div>
       <div class="div-block-112">
@@ -71,7 +71,7 @@
       </div>
       <div class="div-block-119">
         <div class="text-h2-2 black">Your Acceptance Of These Terms</div>
-        <div class="text-terms">If you have any questions about this Privacy Policy, the practices of this site, or your dealings with this site, please contact us at: UX MINT KCV Towers,No. 23,2nd Floor, Ram Nagar North Extn, 7th main road, Velachery, Chennai-600042 | hello@uxmint.in<br><br>This document was last updated on Oct 16 2017.</div>
+        <div class="text-terms">If you have any questions about this Privacy Policy, the practices of this site, or your dealings with this site, please contact us at: UXMINT, Plot no, 16  Nethaji Street, Annai Indira Nagar, Okkiyam, Thoraipakkam, Chennai - 600096 | hello@uxmint.in<br><br>This document was last updated on Mar 25 2021.</div>
       </div>
     </div>
   </div>
@@ -101,11 +101,11 @@
           <div class="w-layout-grid grid-10"><a href="ux-consulting.html" class="text-link-2-footer">User Experience</a><a href="ui-design.html" class="text-link-2-footer">Interface Design</a><a href="ui-development.html" class="text-link-2-footer">UI Development</a><a href="end-to-end-development.html" class="text-link-2-footer">End To End Development</a><a href="usability-testing.html" class="text-link-2-footer">Usability Testing</a></div>
         </div>
       </div>
-      <div class="w-layout-grid terms-grid"><a class="text-link-3-footer">All rights reserved @ 2020</a><a class="text-link-3-footer">Made with love 
+      <div class="w-layout-grid terms-grid"><a class="text-link-3-footer">All rights reserved @ 2021</a><a class="text-link-3-footer">Made with love 
       <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-heart" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
         <path fill-rule="evenodd" d="M8 2.748l-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z"/>
       </svg> 
-      uxmint</a><a href="privacy-policy.html" class="text-link-3-footer">Privacy policy</a><div class="footer-divider-2"></div><a href="terms-&-conditions.html" class="text-link-3-footer">Terms & Conditions</a></div>
+      uxmint</a><a href="privacy-policy.html" class="text-link-3-footer">Privacy Policy</a><div class="footer-divider-2"></div><a href="terms-&-conditions.html" class="text-link-3-footer">Terms & Conditions</a></div>
     </div>
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=5f6d9d4f2f8e7a68b3ffb628" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
