Career page fix

--- a/career.html
+++ b/career.html
@@ -84,7 +84,6 @@
             - Ability to prioritize and manage multiple milestones and projects efficiently <br>
             - Strong communication skills is a must <br>
             Degree in Fine Art, Vis. Comm, Media & Studies, Product Design is preferred. <br><br>
-            Candidates can share their resume with portfolio to <a href="mailto:work@uxmint.in" class="text-button-link-1 lower-case-1">work@uxmint.in</a>
           </div>
         </div>
         <div>
@@ -107,12 +106,18 @@
             - Strong communication skills is a must <br>
             - Experience in Insurance domain added advantage <br>
             Degree in Fine Art, Vis. Comm, Media & Studies, Product Design is preferred. <br><br>
-            Candidates can share their resume with portfolio to <a href="mailto:work@uxmint.in" class="text-button-link-1 lower-case-1">work@uxmint.in</a>
           </div>
         </div>
       </div>
     </div>
   </div>
+
+  <div class="container-14-career w-container">
+    <div class="div-block-83">
+      <div class="text-h3-2 black">Candidates can share their resume with portfolio to <a href="mailto:work@uxmint.in" class="text-button-link-1 lower-case-1"> work@uxmint.in</a></div>
+    </div>
+  </div>
+
   <div class="section-new team">
     <!-- <div class="team-image"><img src="images/team-image-new.png" loading="lazy" srcset="images/team-image-new-p-500.png 500w, images/team-image-new-p-800.png 800w, images/team-image-new-p-1080.png 1080w, images/team-image-new.png 1126w" sizes="(max-width: 1126px) 100vw, 1126px" alt="" style="-webkit-filter: grayscale(1);"></div> -->
     <div class="wrapper w-container">
