--- a/career.html
+++ b/career.html
@@ -55,7 +55,7 @@
       <div class="w-layout-grid grid-about-us-quote">
         <div class="text-h2">We have created products that are loved by users and product owners</div>
         <div class="container-aboutus-quote">
-          <div class="text-h3">If you want your product to be loved by its users,</div><a href="contact.html" class="text-button-link-1 lower-case">Let us know</a></div>
+          <div class="text-h3">If you want to be part of the innovation team,</div><a href="contact.html" class="text-button-link-1 lower-case"> Connect with us</a></div>
       </div>
     </div>
     <div class="wrapper w-container"></div>
