--- a/contact.html
+++ b/contact.html
@@ -159,8 +159,7 @@
       <div class="section-new team map">
         <div class="wrapper w-container">
           <div class="w-layout-grid grid-about-us-target">
-            <div class="mapouter"><div class="gmap_canvas"><iframe width="600" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=Plot%20no,%2016%20Nethaji%20Street,%20Annai%20Indira%20Nagar,%20Okkiyam,%20Thoraipakkam,%20Chennai,%20Tamilnadu%20-%20600096&t=k&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://fmovies2.org"></a><br><a href="https://www.embedgooglemap.net">google map in website</a></div></div>
-            <div>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15554.638548413615!2d80.2329289!3d12.9295839!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xd520a88b9abf07ec!2sUXMINT!5e0!3m2!1sen!2sin!4v1617021616096!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>            <div>
               <div class="div-aboutus-services">
                 <div class="text-h3 black bold">You can drop in to the premises between 10.00 AM to 6.00 PM [Monday - Friday]</div>
               </div>
