contact page changes

--- a/contact.html
+++ b/contact.html
@@ -66,9 +66,9 @@
               <a data-w-tab="1" class="con-tab w-inline-block w-tab-link w--current">
                 <div class="text-block-29">Query &amp; Collaboration</div>
               </a>
-              <!-- <a data-w-tab="2" class="con-tab1 w-inline-block w-tab-link">
+              <a data-w-tab="2" class="con-tab1 w-inline-block w-tab-link">
                 <div class="text-block-30">Career Opportunities</div>
-              </a> -->
+              </a>
             </div>
             <div class="tabs-content-2 w-tab-content">
               <div data-w-tab="1" class="tab-pane-1-4 w-tab-pane w--tab-active">
@@ -114,7 +114,7 @@
                   </div>
                 </div>
               </div>
-              <!-- <div data-w-tab="2" class="w-tab-pane">
+              <div data-w-tab="2" class="w-tab-pane">
                 <div class="div-block-126">
                   <div class="text-22-light">Hey, Fill in the details below to join us.</div>
                 </div>
@@ -150,7 +150,7 @@
                     <div>Oops! Something went wrong while submitting the form.</div>
                   </div>
                 </div>
-              </div> -->
+              </div>
             </div>
           </div>
         </div>
