--- a/engagement-models.html
+++ b/engagement-models.html
@@ -191,22 +191,22 @@
     <div class="wrapper-3 w-container">
       <div class="w-layout-grid grid-services-4">
         <a href="#Fixed-Bid" class="services-grid-content w-inline-block">
-          <div class="div-services-grid"><img src="images/Group 1.svg" loading="lazy" alt="" class="icon-services">
+          <div class="div-services-grid"><img src="images/Group 2.svg" loading="lazy" alt="" class="icon-services">
           </div>
           <div class="text-h5-grey-2">Fixed Bid</div>
         </a>
         <a href="#Time-&-Material" class="services-grid-content w-inline-block">
-          <div class="div-services-grid"><img src="images/Group 2.svg" loading="lazy" alt="" class="icon-services">
+          <div class="div-services-grid"><img src="images/Group 3.svg" loading="lazy" alt="" class="icon-services">
           </div>
           <div class="text-h5-grey-2">Time & <br>Material</div>
         </a>
         <a href="#Dedicated-Team-Model" class="services-grid-content w-inline-block">
-          <div class="div-services-grid"><img src="images/Group 3.svg" loading="lazy" alt=""
+          <div class="div-services-grid"><img src="images/Group 1.svg" loading="lazy" alt=""
               class="icon-services"></div>
-          <div class="text-h5-grey-2">Supporting<br>Solutions</div>
+          <div class="text-h5-grey-2">Dedicated <br>Team Model</div>
         </a>
         <a href="#Test-Feature-Viability" class="services-grid-content w-inline-block">
-          <div class="div-services-grid"><img src="images/Group 6455.svg" loading="lazy" alt=""
+          <div class="div-services-grid"><img src="images/Group 1.svg" loading="lazy" alt=""
               class="icon-services"></div>
           <div class="text-h5-grey-2">Staff Augmentation <br>Model</div>
         </a>
