--- a/engagement-models.html
+++ b/engagement-models.html
@@ -44,7 +44,7 @@
       <div class="heading-container">
         <div class="text-h1">Our engagement models that meet different project needs</div>
       </div>
-      <div class="container-hero-subtitle"><a href="contact.html" class="text-button-link-1 lower-case">Check to understand</a>
+      <div class="container-hero-subtitle"><a class="text-button-link-1 lower-case">Check to understand</a>
         <div class="text-h3 black">what suites you the best</div>
       </div>
     </div>
