--- a/contact.html
+++ b/contact.html
@@ -180,6 +180,27 @@
         </div>
       </div>
 
+      <div class="section-new address"> 
+        <div class="wrapper w-container">
+          <div class="w-layout-grid grid-about-us-target">
+            <div class="reg-adr">
+              <div class="h3-hd">Registered Address in India</div>
+              <div class="h4-hd">Alta vida 4b</div>
+              <div class="h4-sd">
+                Thaiyur, Near Kelambakkam,<br>
+                Old Mahabalipuram Road,<br>
+                Chennai - 603103
+              </div>
+            </div>
+            <div class="reg-adr">
+              <div class="h3-hd">Registered Address in US</div>
+              <div class="h4-hd">651 N Broad St Suite 206</div>
+              <div class="h4-sd">Middletown, Delaware - 19709</div>
+            </div>
+          </div>
+        </div>
+      </div>
+
   <div class="section-footer">
     <div class="footer-wrapper w-container">
       <div class="footer-idea">
