--- a/contact.html
+++ b/contact.html
@@ -181,7 +181,7 @@
       </div>
 
       <div class="section-new address"> 
-        <div class="wrapper w-container">
+        <div class="wrapper w-container c-address">
           <div class="w-layout-grid grid-about-us-target">
             <div class="reg-adr">
               <div class="h3-hd">Registered Address in India</div>
