--- a/src/index.html
+++ b/src/index.html
@@ -11,5 +11,15 @@
 </head>
 <body>
   <app-root></app-root>
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-173088309-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-173088309-1');
+</script>
 </body>
 </html>
