--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <title>Uxmint Design</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="./assets/images/favicon.png">
+  <link rel="icon" type="image/x-icon" href="/favicon.ico">
   <link href="https://fonts.googleapis.com/css2?family=Muli:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">  <link href="https://fonts.googleapis.com/css?family=Muli:300,400,500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
